Fixed layout issues with article links @Johnson

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@
 html
 {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 body
 {
@@ -96,6 +97,7 @@ footer a
 .button
 {
 	border: none;
+	outline: none;
 	cursor: pointer;
 	transition: 0.4s ease-out;
 }
@@ -126,6 +128,7 @@ footer a
 	cursor: pointer;
 	border-radius: 3px;
 	transition: 0.4s ease-out;
+	height: 330px;
 }
 .article:hover
 {
@@ -141,16 +144,32 @@ footer a
 	font-size: 20px;
 	text-align: center;
 	padding: 10px;
-	margin-bottom: 30px;
+	margin-bottom: 5px;
 }
 .article > p
 {
 	font-size: 13px;
-	/* line-height: 1.2; */
 	display: block;
 	width: 70%;
 	margin: 5px;
 	word-wrap: break-word;
+}
+.article-link:link, .article-link:visited 
+{
+	background-color: #444857;
+	color: white;
+	padding: 6px 5px;
+	text-align: center;
+	text-decoration: none;
+	display: block;
+	width: 50%;
+	margin-left: 46%;
+	margin-top: 7%;
+	box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.article-link:hover, .article-link:active 
+{
+	background-color: #5959c1;
 }
 .link-list
 {
@@ -158,7 +177,8 @@ footer a
 	flex-direction: column;
 
 }
-.nav-list a{
+.nav-list a
+{
 	text-decoration: none;
 	color: white;
 }
@@ -340,16 +360,4 @@ footer a
 #social-media a:hover
 {
 	border: 1px solid white;
-}
-a:link, a:visited {
-	background-color: #444857;
-	color: white;
-	padding: 6px 20px;
-	text-align: center;
-	text decoration: none;
-	display: inline-block;
-	box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
-}
-  a:hover, a:active {
-	background-color: #5959c1;
 }
